# ChiDG

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
DNAD/dynamic/: DNAD_D.f90
cmake/macros/: add_python_sources.txt
cmake/modules/: FindTecplot.cmake
doc/: ChiDG.cfg  develop.dox  example_naca2412.dox  example_smoothbump.dox  header.html  input.dox  installation.dox  license.dox  main.dox  references.dox  usage.dox
scripts/: driver.py
src/: CMakeLists.txt  driver.f90
src/actions/convert/: mod_chidg_convert_p3d_hdf5.f90
src/actions/edit/: chidg_edit.f90  mod_chidg_edit_boundaryconditions.f90  mod_chidg_edit_printoverview.f90
src/actions/post/: mod_chidg_post_hdf2tec.f90
src/boundary_conditions/: mod_bc.f90  type_bc.f90  type_bcwrapper.f90
src/chidg/: type_chidg.f90  type_chidg_data.f90  type_chidg_worker.f90
src/constants/: mod_version.f90
src/containers/: CMakeLists.txt  type_blockmatrix.f90  type_blockvector.f90  type_chidgMatrix.f90  type_chidgVector.f90  type_densematrix.f90  type_densevector.f90  type_fcnvector.f90  type_solverdata.f90  type_vector.f90
src/equations/Euler/: EULER_boundary_average_advective_flux.f90  EULER_volume_advective_flux.f90
src/equations/LinearAdvection/: LA_LaxFriedrichs_flux.f90  LA_boundary_average_advective_flux.f90  LA_volume_advective_flux.f90
src/functions/gaussian/: fcn_gaussian.f90
src/grid/: mod_grid.f90  type_element.f90  type_mesh.f90
src/interfaces/: .f2py_f2cmap  CMakeLists.txt  driver.f90  f90wrap_type_chidg_python.f90  kind_map  type_chidg_python.f90  type_dict_python.f90
src/interfaces/graphics/: CMakeLists.txt  type_gather_graphics_bcs.f90  type_graphics_bc.f90
src/io/: mod_file_utilities.f90  mod_hdf_utilities.f90  mod_hdfio.f90  mod_io.f90
src/linear_solvers/: type_fgmres.f90
src/matrix_solvers/: atype_matrixsolver.f90  type_fgmres.f90
src/nonlinear_solvers/: mod_nonlinear_solver.f90
src/preconditioners/: mod_preconditioner.f90  precon_ILU0.f90  precon_ILU0_P0.f90  precon_ILU1.f90
src/quadrature/: mod_quadrature.f90
src/time_scheme/: CMakeLists.txt  backward_euler.f90  forward_euler.f90  mod_time_scheme.f90  steady.f90
src/tools/: messenger.f90
tecio/mac/lib/: libtecio.dylib
unit_testing/containers/: CMakeLists.txt  test_blockmatrix_coarsen.pf  test_blockvector_coarsen.pf
